--- a/previews/FaithValleyGroup/aboutUs.html
+++ b/previews/FaithValleyGroup/aboutUs.html
@@ -40,6 +40,9 @@
         <div class="active"><img src="assets/banner/photo 14.JPG" alt=""></div>
     </div>
 
+
+    <div class="floaty_left"><img src="assets/pencil.png"></div>
+    
     <section class="midbox">
         <h1 class="col-main">Background of Supplementary School</h1>
         <br>
@@ -73,6 +76,9 @@
         <p>Saturday @ 3:00pm - 6:00pm</p>
     </div>
 
+
+    <div class="floaty_left"><img src="assets/pencil.png"></div>
+
     <section class="midbox">
         <h1 class="col-main">Our Mission Statement</h1>
         <br>
@@ -92,6 +98,26 @@
                  Faith Valley Tuition aims to achieve this by enabling young people to recognise and fulfill their potential through developing skills, confidence and aspirations. Faith Valley Tuition aims to raise the standard of education in the community by creating a <strong>progressive caring and high quality learning environment</strong> for all its learners.
             </p>
             <br>
+        </div>
+    </section>
+
+    <div class="floaty_left"><img src="assets/pencil.png"></div>
+
+    <section class="midbox">
+        <h1 class="col-main">Our Staff</h1>
+        <br>
+        <div class="splitBox50 center">
+            <h4><span class="emphasise">Dr. Mary Acquah</span> - English Teacher</h4>
+            <img class="rounded" src="assets/logo.jpg"></img>
+            <p>EdD, MSc & MBA</p>
+            <p>Head of Department</p>
+            <p>Assistant HeadTeacher</p>
+        </div>
+        <div class="splitBox50 center">
+            <h4><span class="emphasise">Dr. Aruna</span> - Science and Maths Teacher</h4>
+            <img class="rounded" src="assets/logo.jpg"></img>
+            <p>PhD, MSc & PGCE</p>
+            <p>Head of Science - Basildon Campus</p>
         </div>
     </section>
 
