--- a/previews/FaithValleyGroup/gallery.html
+++ b/previews/FaithValleyGroup/gallery.html
@@ -31,7 +31,17 @@
         </ul>
     </nav>
 
-    <div style="min-height:59px"></div>
+    <!-- <div style="min-height:59px"></div> -->
+    <div id="nucleon-carousel">
+        <div class="inactive"><img src="assets/IMG_1727.JPG" alt=""></div>
+        <div class="inactive"><img src="assets/IMG_1617.JPG" alt=""></div>
+        <div class="inactive"><img src="assets/IMG_1725.JPG" alt=""></div>
+        <div class="inactive"><img src="assets/IMG_1733.JPG" alt=""></div>
+        <div class="active"><img src="assets/IMG_1737.JPG" alt=""></div>
+    </div>
+
+
+    <div class="floaty_left"><img src="assets/pencil.png"></div>
 
     <section id="galContainer" class="midbox center">
         <h1 class="col-main">Our Gallery</h1>
