--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -38,8 +38,11 @@
         <div class="active"><img src="assets/IMG_1737.JPG" alt=""></div>
     </div>
 
+
+    <div class="floaty_left"><img src="assets/pencil.png"></div>
+
     <section class="midbox">
-        <h1>Faith Valley Group</h1>
+        <h1 class="col-main">Faith Valley Tuition</h1>
         <br>
         <div class="splitBox60">
             <p>
@@ -58,6 +61,7 @@
             We aim to help learners develop their ambition and self-esteem; providing them with the extra educational support they require, in a friendly and caring environment. We aim to improve young leaners' attainment in school by helping them overcome any barriers to learning that they may face, and build up their confidence.
         </p>
     </section>
+
     
     <div class="dish">
         <h1>HOW DO I ENROL MY CHILD?</h1>
