--- a/previews/FaithValleyGroup/aboutUs.html
+++ b/previews/FaithValleyGroup/aboutUs.html
@@ -107,19 +107,22 @@
         <h1 class="col-main">Our Staff</h1>
         <br>
         <div class="splitBox50 center">
-            <h4><span class="emphasise">Dr. Mary Acquah</span> - English Teacher</h4>
-            <img class="rounded" src="assets/logo.jpg"></img>
+            <h4><span class="emphasise">Mrs. Mary Acquah</span> - English Teacher</h4>
+            <!-- <img class="rounded" src="assets/logo.jpg"></img> -->
+            <br>
             <p>EdD, MSc & MBA</p>
             <p>Head of Department</p>
             <p>Assistant HeadTeacher</p>
         </div>
         <div class="splitBox50 center">
             <h4><span class="emphasise">Dr. Aruna</span> - Science and Maths Teacher</h4>
-            <img class="rounded" src="assets/logo.jpg"></img>
+            <!-- <img class="rounded" src="assets/logo.jpg"></img> -->
+            <br>
             <p>PhD, MSc & PGCE</p>
             <p>Head of Science - Basildon Campus</p>
         </div>
     </section>
+    <br>
 
     <footer>
         Faith Valley Group 2016
