updated contact email

--- a/previews/FaithValleyGroup/contact.html
+++ b/previews/FaithValleyGroup/contact.html
@@ -37,14 +37,14 @@
     <section class="midbox">
         <h1 class="col-main">Get in touch</h1>
         <br>
-        <p class="flowdown"><strong class="emphasise">Email Contact:</strong> faithvalleytuition@gmail.com</p>
+        <p class="flowdown"><strong class="emphasise">Email Contact:</strong> faithvalleygroup@gmail.com</p>
         <br>
         <p class="flowdown"><strong class="emphasise">Telephone:</strong> 07515913212</p>
         <br>
         <p class="flowdown"><strong class="emphasise">Address:</strong> Green Leaf School, 80 Greenleaf Road   Walthamstow,   E17 6QW</p>
         <br>
         <div class="splitBox66">
-            <script type="text/javascript"> id = 203255; </script>
+            <script type="text/javascript"> id = 203662; clr = "ffffff-289e51--ffffff"; </script>
             <script type="text/javascript" src="http://kontactr.com/wp.js"></script>
         </div>
         <div class="splitBox33">
