improved the banner nucleon

--- a/previews/FaithValleyGroup/Plan.html
+++ b/previews/FaithValleyGroup/Plan.html
@@ -31,7 +31,7 @@
     </nav>
     
     <br>
-    <div id="nucleon-carousel">
+    <div id="nucleon-banner">
         <div class="inactive"><img src="assets/IMG_1727.JPG" alt=""></div>
         <div class="inactive"><img src="assets/IMG_1617.JPG" alt=""></div>
         <div class="inactive"><img src="assets/IMG_1725.JPG" alt=""></div>
