--- a/previews/FaithValleyGroup/aboutUs.html
+++ b/previews/FaithValleyGroup/aboutUs.html
@@ -32,12 +32,12 @@
         </ul>
     </nav>
 
-    <div id="nucleon-carousel">
-        <div class="inactive"><img src="assets/banner/photo 4.JPG" alt=""></div>
+    <div id="nucleon-banner">
+        <div class="active"><img src="assets/banner/photo 4.JPG" alt=""></div>
         <div class="inactive"><img src="assets/banner/photo 5.JPG" alt=""></div>
         <div class="inactive"><img src="assets/banner/photo 9.JPG" alt=""></div>
         <div class="inactive"><img src="assets/banner/photo 11.JPG" alt=""></div>
-        <div class="active"><img src="assets/banner/photo 14.JPG" alt=""></div>
+        <div class="inactive"><img src="assets/banner/photo 14.JPG" alt=""></div>
     </div>
 
 
