--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -30,14 +30,14 @@
             <li><a href="Plan.html">Services</a></li>
         </ul>
     </nav>
-    <div id="nucleon-carousel">
-        <div class="inactive"><img src="assets/IMG_1727.JPG" alt=""></div>
-        <div class="inactive"><img src="assets/IMG_1617.JPG" alt=""></div>
-        <div class="inactive"><img src="assets/IMG_1725.JPG" alt=""></div>
-        <div class="inactive"><img src="assets/IMG_1733.JPG" alt=""></div>
-        <div class="active"><img src="assets/IMG_1737.JPG" alt=""></div>
+    
+    <div id="nucleon-banner">
+        <div class="active"><img  src="assets/IMG_1727.JPG" alt=""></div><!--  d
+          --><div class="inactive"><img  src="assets/IMG_1617.JPG" alt=""></div><!--  d
+          --><div class="inactive"><img  src="assets/IMG_1725.JPG" alt=""></div><!--  d
+          --><div class="inactive"><img  src="assets/IMG_1733.JPG" alt=""></div><!--  d
+          --><div class="inactive"><img    src="assets/IMG_1737.JPG" alt=""></div>
     </div>
-
 
     <div class="floaty_left"><img src="assets/pencil.png"></div>
 
