--- a/previews/FaithValleyGroup/gallery.html
+++ b/previews/FaithValleyGroup/gallery.html
@@ -32,12 +32,12 @@
     </nav>
 
     <!-- <div style="min-height:59px"></div> -->
-    <div id="nucleon-carousel">
-        <div class="inactive"><img src="assets/IMG_1727.JPG" alt=""></div>
+    <div id="nucleon-banner">
+        <div class="active"><img src="assets/IMG_1727.JPG" alt=""></div>
         <div class="inactive"><img src="assets/IMG_1617.JPG" alt=""></div>
         <div class="inactive"><img src="assets/IMG_1725.JPG" alt=""></div>
         <div class="inactive"><img src="assets/IMG_1733.JPG" alt=""></div>
-        <div class="active"><img src="assets/IMG_1737.JPG" alt=""></div>
+        <div class="inactive"><img src="assets/IMG_1737.JPG" alt=""></div>
     </div>
 
 
