--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -30,6 +30,7 @@
             <li><a href="Plan.html">Services</a></li>
         </ul>
     </nav>
+    <marquee class="newsflash">Special Offer: Limited time only, half price on tuition sessions for year 3, 4, 5, and 6!</marquee>
     
     <div id="nucleon-banner">
         <div class="active"><img  src="assets/IMG_1727.JPG" alt=""></div><!--  d
