--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -30,7 +30,7 @@
             <li><a href="Plan.html">Services</a></li>
         </ul>
     </nav>
-    <marquee class="newsflash">Special Offer: Limited time only, half price on tuition sessions for year 3, 4, 5, and 6!</marquee>
+    <marquee class="newsflash">We are now accepting registration for September 2016!<pre>                                </pre>Promotion: Reduced pricing on tuition sessions for year 4, 5, and 6, 11+ exams preparation, selection exam preparation, and A level english. See pricing for more information
     
     <div id="nucleon-banner">
         <div class="active"><img  src="assets/IMG_1727.JPG" alt=""></div><!--  d
