--- a/previews/FaithValleyGroup/Plan.html
+++ b/previews/FaithValleyGroup/Plan.html
@@ -29,14 +29,15 @@
             <li class="active"><a href="#">Services</a></li>
         </ul>
     </nav>
+    <marquee class="newsflash">We are now accepting registration for September 2016!<pre>                                </pre>Promotion: Reduced pricing on tuition sessions for year 4, 5, and 6, 11+ exams preparation, selection exam preparation, and A level english. See pricing for more information
     
     <br>
     <div id="nucleon-banner">
-        <div class="inactive"><img src="assets/IMG_1727.JPG" alt=""></div>
-        <div class="inactive"><img src="assets/IMG_1617.JPG" alt=""></div>
-        <div class="inactive"><img src="assets/IMG_1725.JPG" alt=""></div>
-        <div class="inactive"><img src="assets/IMG_1733.JPG" alt=""></div>
-        <div class="active"><img src="assets/IMG_1737.JPG" alt=""></div>
+        <div class="active"><img  src="assets/IMG_1727.JPG" alt=""></div><!--  d
+          --><div class="inactive"><img  src="assets/IMG_1617.JPG" alt=""></div><!--  d
+          --><div class="inactive"><img  src="assets/IMG_1725.JPG" alt=""></div><!--  d
+          --><div class="inactive"><img  src="assets/IMG_1733.JPG" alt=""></div><!--  d
+          --><div class="inactive"><img    src="assets/IMG_1737.JPG" alt=""></div>
     </div>
 
 
