updated banner image

--- a/previews/FaithValleyGroup/gallery.html
+++ b/previews/FaithValleyGroup/gallery.html
@@ -30,10 +30,10 @@
             <li><a href="Plan.html">Services</a></li>
         </ul>
     </nav>
-    <marquee class="newsflash">We are now accepting registration for September 2016!<pre>                                </pre>Promotion: Reduced pricing on tuition sessions for year 4, 5, and 6, 11+ exams preparation, selection exam preparation, and A level english. See pricing for more information
+    <marquee class="newsflash">We are now accepting registration for 2016/17!<pre>                                </pre>Promotion: Reduced pricing on tuition sessions for year 4, 5, and 6, 11+ exams preparation, selection exam preparation, and A level english. See pricing for more information</marquee>
     
     <!-- <div style="min-height:59px"></div> -->
-    <div id="nucleon-banner">
+    <div id="nucleon-carousel">
         <div class="active"><img  src="assets/IMG_1727.JPG" alt=""></div><!--  d
           --><div class="inactive"><img  src="assets/IMG_1617.JPG" alt=""></div><!--  d
           --><div class="inactive"><img  src="assets/IMG_1725.JPG" alt=""></div><!--  d
