--- a/previews/FaithValleyGroup/contact.html
+++ b/previews/FaithValleyGroup/contact.html
@@ -29,7 +29,7 @@
             <li><a href="Plan.html">Services</a></li>
         </ul>
     </nav>
-    <marquee class="newsflash">We are now accepting registration for September 2016!<pre>                                </pre>Promotion: Reduced pricing on tuition sessions for year 4, 5, and 6, 11+ exams preparation, selection exam preparation, and A level english. See pricing for more information
+    <marquee class="newsflash">We are now accepting registration for 2016/17!<pre>                                </pre>Promotion: Reduced pricing on tuition sessions for year 4, 5, and 6, 11+ exams preparation, selection exam preparation, and A level english. See pricing for more information</marquee>
     
     <div id="nucleon-carousel">
         <div class="active"><img src="assets/banner/ex photo 1.JPG" alt=""></div>
