--- a/previews/FaithValleyGroup/index.html
+++ b/previews/FaithValleyGroup/index.html
@@ -30,17 +30,16 @@
             <li><a href="Plan.html">Services</a></li>
         </ul>
     </nav>
-    <marquee class="newsflash">We are now accepting registration for September 2016!<pre>                                </pre>Promotion: Reduced pricing on tuition sessions for year 4, 5, and 6, 11+ exams preparation, selection exam preparation, and A level english. See pricing for more information
+    <marquee class="newsflash">We are now accepting registration for 2016/17!<pre>                                </pre>Promotion: Reduced pricing on tuition sessions for year 4, 5, and 6, 11+ exams preparation, selection exam preparation, and A level english. See pricing for more information </marquee>
     
-    <div id="nucleon-banner">
-        <div class="active"><img  src="assets/IMG_1727.JPG" alt=""></div><!--  d
-          --><div class="inactive"><img  src="assets/IMG_1617.JPG" alt=""></div><!--  d
-          --><div class="inactive"><img  src="assets/IMG_1725.JPG" alt=""></div><!--  d
-          --><div class="inactive"><img  src="assets/IMG_1733.JPG" alt=""></div><!--  d
-          --><div class="inactive"><img    src="assets/IMG_1737.JPG" alt=""></div>
-    </div>
+     <div id="nucleon-carousel">
+        <div class="active"><img  src="assets/IMG_1727.JPG" alt=""></div>
+        <div class="inactive"><img  src="assets/IMG_1617.JPG" alt=""></div>
+        <div class="inactive"><img  src="assets/IMG_1725.JPG" alt=""></div>
+        <div class="inactive"><img  src="assets/IMG_1733.JPG" alt=""></div><div class="inactive"><img    src="assets/IMG_1737.JPG" alt=""></div>
+    </div> 
 
-    <div class="floaty_left"><img src="assets/pencil.png"></div>
+     <div class="floaty_left"><img src="assets/pencil.png"></div> 
 
     <section class="midbox">
         <h1 class="col-main">Faith Valley Tuition</h1>
