--- a/previews/MoizaBertrandX/index.html
+++ b/previews/MoizaBertrandX/index.html
@@ -11,14 +11,15 @@
 	<div class="bgImage" id="p1"></div>
 	<div class="bgImage" id="p2"></div>
 	<h1 class="CenterName">Mo&#239;za <span class="shrinkName">Bertrand</span></h1>
-	<p class="content">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	<div class="content">
+		<h1>About Me</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</p>
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
 	<div class="spacer"></div>
 	<p>H</p>
 </body>
