--- a/previews/MoizaBertrandX/index.html
+++ b/previews/MoizaBertrandX/index.html
@@ -5,22 +5,49 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=BioRhyme">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+	<link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
 	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript">
+		$(function() {
+					$.scrollify({
+						section : "#p1, .content, .sidecontent, footer",
+					});
+				});
+	</script>
 </head>
 <body>
 	<div class="bgImage" id="p1"></div>
 	<div class="bgImage" id="p2"></div>
+	<div class="bgImage" id="p3"></div>
+
 	<h1 class="CenterName">Mo&#239;za <span class="shrinkName">Bertrand</span></h1>
+
 	<div class="content">
-		<h1>About Me</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<h1>I am an Actress, a Performer, an Achiever!</h1>
+		<p> Theatre has always been a mainstay and a delight, and I can think of nothing better than pursuing a career in this industry. After doing four school productions, playing the lead role in two of them, I fell in love with the atmosphere and buzz performing gives me.
+
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. </p>
 	</div>
-	<div class="spacer"></div>
-	<p>H</p>
+
+
+	<div class="sidecontent">
+		<h1>My Work</h1>
+		<video controls="controls" name="Video Name" src="movie.mov"></video>
+	</div>
+
+	<footer>
+		<h1>Contact Me!!</h1>
+		<h3>Get in touch with me today!</h3>
+		<div class="soc"> <a href="#" class="socicon-twitter"></a></div>
+		<div class="soc"> <a href="#" class="socicon-facebook"></a></div>
+		<div class="soc"> <a href="#" class="socicon-youtube"></a></div>
+		<div class="soc"> <a href="#" class="socicon-vimeo"></a></div>
+		<div class="soc"> <a href="#" class="socicon-instagram"></a></div>
+		<div class="soc"> <a href="#" class="socicon-snapchat"></a></div>
+		<div class="soc"> <a href="#" class="socicon-wordpress"></a></div>
+		<h4 class="soc-email"><a href="mailto:moizabertrand@outlook.com">moizabertrand@outlook.com</a></h4>
+		<p>2016</p>
+	</footer>
 </body>
 </html>
