--- a/previews/MoizaBertrandX/index.html
+++ b/previews/MoizaBertrandX/index.html
@@ -39,15 +39,16 @@
 	<footer>
 		<h1>Contact Me!!</h1>
 		<h3>Get in touch with me today!</h3>
-		<div class="soc"> <a href="#" class="socicon-twitter"></a></div>
-		<div class="soc"> <a href="#" class="socicon-facebook"></a></div>
-		<div class="soc"> <a href="#" class="socicon-youtube"></a></div>
-		<div class="soc"> <a href="#" class="socicon-vimeo"></a></div>
-		<div class="soc"> <a href="#" class="socicon-instagram"></a></div>
-		<div class="soc"> <a href="#" class="socicon-snapchat"></a></div>
+		<div class="soc"> <a href="https://twitter.com/moizabacting" class="socicon-twitter"></a></div>
+		<div class="soc"> <a href="https://www.facebook.com/moizabacting" class="socicon-facebook"></a></div>
+		<div class="soc"> <a href="https://www.youtube.com/channel/UCZisYxvsoBxls6rwrvVZGiA" class="socicon-youtube"></a></div>
+		<div class="soc"> <a href="https://vimeo.com/moizabacting" class="socicon-vimeo"></a></div>
+		<div class="soc"> <a href="https://www.instagram.com/Moizabacting/" class="socicon-instagram"></a></div>
+		<div class="soc"> <a href="#" onclick="alert('Search Moizabacting on snapchat!');" class="socicon-snapchat"></a></div>
 		<div class="soc"> <a href="#" class="socicon-wordpress"></a></div>
 		<h4 class="soc-email"><a href="mailto:moizabertrand@outlook.com">moizabertrand@outlook.com</a></h4>
 		<p>2016</p>
+		<a class="creative" href="#">Made with <span style="color:#c33">&#9829;</span> by Daryl Cecile</a>
 	</footer>
 </body>
 </html>
