final moi web push

--- a/previews/MoizaBertrandX/index.html
+++ b/previews/MoizaBertrandX/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ttile</title>
+	<title>Mo&#239;za Bertrand</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=BioRhyme">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -24,10 +25,9 @@
 
 	<div class="content">
 		<h1>I am an Actress, a Performer, an Achiever!</h1>
-		<p> Theatre has always been a mainstay and a delight, and I can think of nothing better than pursuing a career in this industry. After doing four school productions, playing the lead role in two of them, I fell in love with the atmosphere and buzz performing gives me.
+		<p> As a young actress, I am enthusiastic about pursuing opportunities and success. Being able to build an impotional connection, and incite an emotional response, with an audience through my own portrayal of a character creates an imitable feeling that is so unique to the performing arts.
 
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. </p>
+		I am constantly inspired by working alongside other artists, and excited to develop my own skills and knowledge as an acress, as I venture further into the world of theatre and film, and to find roles that will allow me to do this. I am enthusiastic and hardworking, and driven to find opportunities to establish myself, and show my versatility and flexibility as an actress. </p>
 	</div>
 
 
